[gd_scene load_steps=8 format=2]

[ext_resource path="res://Level.tscn" type="PackedScene" id=1]
[ext_resource path="res://levels/BossPuzzle.gd" type="Script" id=2]
[ext_resource path="res://Victim.tscn" type="PackedScene" id=3]
[ext_resource path="res://PressurePlate.tscn" type="PackedScene" id=4]
[ext_resource path="res://levels/Win.tscn" type="PackedScene" id=5]
[ext_resource path="res://Door.tscn" type="PackedScene" id=6]
[ext_resource path="res://Tile.tscn" type="PackedScene" id=7]

[node name="Boss_Level" index="0" instance=ExtResource( 1 )]

[node name="BossPuzzle" type="Node" parent="." index="0"]

editor/display_folded = true
script = ExtResource( 2 )
HappyVictim = ExtResource( 3 )

[node name="PressurePlate_cape" parent="BossPuzzle" index="0" instance=ExtResource( 4 )]

position = Vector2( 103.197, 322.605 )

[node name="PressurePlate_boots" parent="BossPuzzle" index="1" instance=ExtResource( 4 )]

position = Vector2( 934.385, 69.5762 )

[node name="PressurePlate_belt" parent="BossPuzzle" index="2" instance=ExtResource( 4 )]

position = Vector2( 274.604, 181.127 )

[node name="PressurePlate_s" parent="BossPuzzle" index="3" instance=ExtResource( 4 )]

position = Vector2( 910.441, 531.091 )

[node name="PressurePlate_suit" parent="BossPuzzle" index="4" instance=ExtResource( 4 )]

position = Vector2( 606.94, 122.105 )

[node name="Hero" parent="." index="1"]

position = Vector2( 149.967, 502.598 )

[node name="Gate" parent="." index="2"]

position = Vector2( 500, 100 )
level = ExtResource( 5 )

[node name="PressurePlate" parent="." index="3" instance=ExtResource( 4 )]

position = Vector2( 869.45, 321.531 )

[node name="Door1" parent="." index="4" instance=ExtResource( 6 )]

position = Vector2( 432.373, 247.896 )
scale = Vector2( 1, 1.55058 )

[node name="Door2" parent="." index="5" instance=ExtResource( 6 )]

position = Vector2( 533.081, 247.896 )
scale = Vector2( 1, 1.55058 )

[node name="Tile" parent="Tiles" index="0"]

position = Vector2( 516.098, 570 )
scale = Vector2( 16.0594, 1 )

[node name="Tile2" parent="Tiles" index="1" instance=ExtResource( 7 )]

position = Vector2( 480.134, 359.53 )

[node name="Tile15" parent="Tiles" index="2" instance=ExtResource( 7 )]

position = Vector2( 710, 201.545 )

[node name="Tile16" parent="Tiles" index="3" instance=ExtResource( 7 )]

position = Vector2( 777.263, 225.255 )
scale = Vector2( 1.22695, 0.231444 )

[node name="Tile19" parent="Tiles" index="4" instance=ExtResource( 7 )]

position = Vector2( 794.513, 45.6329 )
scale = Vector2( 1.22695, 0.231444 )

[node name="Tile17" parent="Tiles" index="5" instance=ExtResource( 7 )]

position = Vector2( 956.65, 295.745 )
scale = Vector2( 1.09075, 1.12139 )

[node name="Tile14" parent="Tiles" index="6" instance=ExtResource( 7 )]

position = Vector2( 410, 110 )

[node name="Tile10" parent="Tiles" index="7" instance=ExtResource( 7 )]

position = Vector2( 701.108, 495.54 )
scale = Vector2( 1.75, 0.8125 )

[node name="Tile12" parent="Tiles" index="8" instance=ExtResource( 7 )]

position = Vector2( 527.5, 160 )
scale = Vector2( 4.76562, 1 )

[node name="Tile18" parent="Tiles" index="9" instance=ExtResource( 7 )]

position = Vector2( 944.078, 108.678 )
scale = Vector2( 1.41021, 1 )

[node name="Tile13" parent="Tiles" index="10" instance=ExtResource( 7 )]

position = Vector2( 271.631, 220 )
scale = Vector2( 3.42561, 1 )

[node name="Tile11" parent="Tiles" index="11" instance=ExtResource( 7 )]

position = Vector2( 720, 438.864 )

[node name="Tile9" parent="Tiles" index="12" instance=ExtResource( 7 )]

position = Vector2( 114, 360 )
scale = Vector2( 2.0625, 1 )

[node name="Tile5" parent="Tiles" index="13" instance=ExtResource( 7 )]

position = Vector2( 780, 441.007 )
scale = Vector2( 1, 2.49979 )

[node name="Tile7" parent="Tiles" index="14" instance=ExtResource( 7 )]

position = Vector2( 59, 400.5 )
scale = Vector2( 1.90625, 2.20312 )

[node name="Tile8" parent="Tiles" index="15" instance=ExtResource( 7 )]

position = Vector2( 83.8459, 160 )
scale = Vector2( 2.65144, 2.20312 )

[node name="Tile6" parent="Tiles" index="16" instance=ExtResource( 7 )]

position = Vector2( 30, 319.962 )
scale = Vector2( 1, 6.90743 )

[node name="Tile4" parent="Tiles" index="17" instance=ExtResource( 7 )]

position = Vector2( 896.771, 360 )
scale = Vector2( 2.71161, 1 )

[node name="Tile3" parent="Tiles" index="18" instance=ExtResource( 7 )]

position = Vector2( 994.421, 240.982 )
scale = Vector2( 0.861856, 9.37555 )

[node name="Spikes" parent="." index="7"]

editor/display_folded = false

[node name="Spikes" parent="Spikes" index="0"]

position = Vector2( 866.974, 71.9518 )
scale = Vector2( 1, 0.920545 )

[node name="Tank" parent="Tanks" index="0"]

position = Vector2( 480.134, 299.53 )
visibility_modifier = 1.3
shoot_wait_time = 1.2

[node name="HeartCollectibles" parent="." index="9"]

editor/display_folded = false

[node name="HeartCollectible" parent="HeartCollectibles" index="0"]

position = Vector2( 475.806, 509.992 )

[node name="WaterTile" parent="WaterTiles" index="0"]

position = Vector2( 275.181, 146 )
scale = Vector2( 3.27559, 1.4375 )


